fixed subheading spacing and size

--- a/legal/CSS/styles.css
+++ b/legal/CSS/styles.css
@@ -107,7 +107,7 @@ th, td{
   font-family: Josefin Sans;
 }
 .subtitle-text{
-    font-size: 26px;
+    font-size: 18px;
     color: rgb(81, 9, 99);
     text-align: center;
     font-family: Josefin Sans;
